actions and card connected -- no styling

--- a/src/app/newscard-actions/newscard-actions.component.html
+++ b/src/app/newscard-actions/newscard-actions.component.html
@@ -1,43 +1,43 @@
-<span *ngIf="numComments <= 0">
+<span *ngIf="data.numComments <= 0">
   <button mat-button color="primary" (click)="_onComment()">
     <mat-icon>comment</mat-icon>
   </button>
 </span>
 
-<span *ngIf="numComments > 0">
+<span *ngIf="data.numComments > 0">
   <button mat-button color="primary" (click)="_onComment()">
-    <mat-icon matBadge="{{numComments}}" matBadgePosition="above before"
+    <mat-icon matBadge="{{data.numComments}}" matBadgePosition="above before"
 	      matBadgeOverlap="false" matBadgeColor="primary">comment</mat-icon>
   </button>
 </span>
 
-<span *ngIf="numLikes <= 0">
+<span *ngIf="data.numLikes <= 0">
   <button mat-button color="primary" (click)="_onLiked()">
     <mat-icon>thumb_up_alt</mat-icon>
   </button>
 </span>
 
-<span *ngIf="!hasLiked && numLikes > 0">
+<span *ngIf="!data.hasLiked && data.numLikes > 0">
   <button mat-button color="primary" (click)="_onLiked()">
-    <mat-icon matBadge="{{numLikes}}" matBadgePosition="above before"
+    <mat-icon matBadge="{{data.numLikes}}" matBadgePosition="above before"
 	      matBadgeOverlap="false" matBadgeColor="primary">thumb_up_alt</mat-icon>
   </button>
 </span>
 
-<span *ngIf="hasLiked && numLikes > 0">
+<span *ngIf="data.hasLiked && data.numLikes > 0">
   <button mat-button color="primary" (click)="_onLiked()">
-    <mat-icon matBadge="{{numLikes}}" matBadgePosition="above before"
+    <mat-icon matBadge="{{data.numLikes}}" matBadgePosition="above before"
 	      matBadgeOverlap="false" matBadgeColor="accent">thumb_up_alt</mat-icon>
   </button>
 </span>
 
-<span *ngIf="stared">
+<span *ngIf="data.stared">
   <button mat-button color="primary" (click)="_onStar()">
     <mat-icon>star</mat-icon>
   </button>
 </span>
 
-<span *ngIf="!stared">
+<span *ngIf="!data.stared">
   <button mat-button color="primary" (click)="_onStar()">
     <mat-icon>star_outline</mat-icon>
   </button>
