--- a/src/app/newscard/newscard.component.html
+++ b/src/app/newscard/newscard.component.html
@@ -1,3 +1,4 @@
+<div *ngIf='newsArticle$ | async as newsArticle'>
 <mat-card fxLayout='column' fxFlex="1 1 auto" class="mat-card">
   <img *ngIf="newsArticle.urlToImage" mat-card-image
        class="mat-card-image" src={{newsArticle.urlToImage}}
@@ -6,15 +7,14 @@
   <img *ngIf="!newsArticle.urlToImage" mat-card-image
        class="mat-card-image" src="../../assets/errorImg/cantLoadImg.png" alt="">
 
-  <div class="center">
-    <mat-card-header class="hrader-top-to-bottom">
-      <mat-card-title class="title">
-	{{newsArticle.title}}
-      </mat-card-title>
+  <mat-card-header class="hrader-top-to-bottom">
+    <mat-card-title class="title">
+      {{newsArticle.title}}
+    </mat-card-title>
       
-      <mat-card-subtitle class="subtitle" >
-	{{newsArticle.source.name}}
-      </mat-card-subtitle>
+    <mat-card-subtitle class="subtitle" >
+      {{newsArticle.source.name}}
+    </mat-card-subtitle>
   </mat-card-header>
 
   <mat-card-content class="mat-card-content">
@@ -25,10 +25,12 @@
   </mat-card-content>
 
   <mat-card-actions class="mat-action-content">
-
+    <newscard-actions [data]='newsActionData$ | async'
+		      (onChanged)='_onChanged($event)'> </newscard-actions>
   </mat-card-actions>
-  </div>
 
+  
 
 </mat-card>
 
+</div>
