--- a/src/app/newscard/newscard.component.html
+++ b/src/app/newscard/newscard.component.html
@@ -1,4 +1,4 @@
-<mat-card *ngIf='newsArticle$ | async as newsArticle'
+<mat-card 
 	  fxLayout='column' fxFlex="1 1 auto" class="mat-card">
 
   <img *ngIf="newsArticle.urlToImage" mat-card-image
@@ -24,7 +24,7 @@
     </p>
   </mat-card-content>
   
-  <mat-card-actions *ngIf='newsActionData$ | async as newsActionData'
+  <mat-card-actions 
 		    class="mat-action-content">
     <newscard-actions [data]='newsActionData'
 		      (onChanged)='_onChanged($event)'>
