fixed action propgation

--- a/src/app/newscard/newscard.component.html
+++ b/src/app/newscard/newscard.component.html
@@ -26,7 +26,7 @@
   
   <mat-card-actions 
 		    class="mat-action-content">
-    <newscard-actions [data]='newsActionData'
+    <newscard-actions [data]='newsArticle.newsActionData'
 		      (onChanged)='_onChanged($event)'>
     </newscard-actions>
   </mat-card-actions>
