--- a/src/app/news-list/news-list.component.html
+++ b/src/app/news-list/news-list.component.html
@@ -1,10 +1,10 @@
 <cdk-virtual-scroll-viewport itemSize="300" class="viewport">
-    <span *cdkVirtualFor="let article of article$ | async; trackBy:
-			  trackByIdx" class="item">
+    <span *cdkVirtualFor="let article of articles; trackBy:
+			  trackByIdx;templateCacheSize:0" class="item">
       <newscard  [newsArticle]="article"
 		 (onViewArticle)="_onViewArticle($event)"
 		 (onChanged)="_onChanged($event)">
->
+
       </newscard>
     </span>
 </cdk-virtual-scroll-viewport>
