Updates for global addons

--- a/src/app/news-list/news-list.component.scss
+++ b/src/app/news-list/news-list.component.scss
@@ -1,7 +1,8 @@
 .viewport {
-  height: -webkit-fill-available;
-  width: inherit;
-  border: 1px solid black;
+    height: -webkit-fill-available;
+    height: 100vh;
+    width: inherit;
+    border: 1px solid black;
 }
 .item {
   height: 50px;
