--- a/src/app/news-list/news-list.component.html
+++ b/src/app/news-list/news-list.component.html
@@ -1,4 +1,4 @@
-<cdk-virtual-scroll-viewport autosize class="viewport">
+<cdk-virtual-scroll-viewport itemSize="800px" class="viewport">
     <span *cdkVirtualFor="let article of articles; trackBy:
 			  trackByIdx; " class="item"
 	  >
