--- a/src/app/newscard-actions/newscard-actions.component.scss
+++ b/src/app/newscard-actions/newscard-actions.component.scss
@@ -1,5 +1,10 @@
 .actions {
-    width:fit-content;
-    display: inline-block;
+    width:800px;
+    height:90px;
+    align-text:center;
+    display: flex;
 }
 
+span {
+    margin:auto;
+}
