--- a/src/app/newscard-actions/newscard-actions.component.scss
+++ b/src/app/newscard-actions/newscard-actions.component.scss
@@ -1,10 +1,5 @@
 .actions {
-    width:800px;
-    height:90px;
     align-text:center;
-    display: flex;
+    display: inline-block;
 }
 
-span {
-    margin:auto;
-}
