--- a/src/app/newscard/newscard.component.scss
+++ b/src/app/newscard/newscard.component.scss
@@ -1,5 +1,7 @@
 .mat-card-image {
-  width: 100%;
+    width: 100%;
+    object-fit:cover;
+    max-height:300px;
   margin: 0 !important;
 }
 
@@ -17,6 +19,7 @@
 }
 
 .mat-card-actions {
+    text-align:center;
 }
 
 
