start demo state

--- a/src/app/newscard/newscard.component.html
+++ b/src/app/newscard/newscard.component.html
@@ -1,5 +1,4 @@
-<mat-card 
-	  fxLayout='column' fxFlex="1 1 auto" class="mat-card">
+<mat-card fxLayout='column' fxFlex="1 1 auto" class="mat-card">
 
   <img *ngIf="newsArticle.urlToImage" mat-card-image
        class="mat-card-image" src={{newsArticle.urlToImage}}
